--- a/dreamer/configs/racing.yml
+++ b/dreamer/configs/racing.yml
@@ -14,7 +14,9 @@ environment :
 parameters :
     dreamer :
         train_iterations : 1000
+        save_interval : 40
         horizon_length : 15
+
         batch_size : 50
         batch_length : 50
         collect_interval : 100
